Made index default page

--- a/thankyou.html
+++ b/thankyou.html
@@ -22,7 +22,7 @@ Thanks for being a part of Mukand Utsav
 <p class="text-2xl font-bold text-green-400" id="tokenValue"></p>
 </div>
 
-<a href="first.html"
+<a href="index.html"
 class="inline-block mt-8 px-6 py-3 bg-pink-500 rounded-full">
 Back to Home
 </a>
