--- a/events.html
+++ b/events.html
@@ -177,7 +177,7 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
 
                 <!-- Desktop menu (hidden on small screens) -->
                 <div class="hidden md:flex flex-wrap justify-center gap-4 md:gap-6">
-                    <a href="first.html" class="text-gray-300 hover:text-glow-pink transition-colors font-medium px-3 py-2 rounded-lg hover:bg-white/5">Home</a>
+                    <a href="index.html" class="text-gray-300 hover:text-glow-pink transition-colors font-medium px-3 py-2 rounded-lg hover:bg-white/5">Home</a>
                     <a href="about.html" class="text-gray-300 hover:text-glow-pink transition-colors font-medium px-3 py-2 rounded-lg hover:bg-white/5">About</a>
                     <a href="events.html" class="text-gray-300 hover:text-glow-pink transition-colors font-medium px-3 py-2 rounded-lg hover:bg-white/5">Events</a>
                     <a href="whyparticipate.html" class="text-gray-300 hover:text-glow-pink transition-colors font-medium px-3 py-2 rounded-lg hover:bg-white/5">Why Participate</a>
@@ -189,7 +189,7 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
                 <!-- Mobile menu (hidden by default) -->
                 <div id="mobile-menu" class="hidden md:hidden absolute left-4 top-full mt-2 w-56 bg-card-dark/95 rounded-lg shadow-lg py-3 px-3 z-50">
                     <nav class="flex flex-col gap-2">
-                        <a href="first.html" class="text-gray-200 hover:text-glow-pink px-3 py-2 rounded">Home</a>
+                        <a href="index.html" class="text-gray-200 hover:text-glow-pink px-3 py-2 rounded">Home</a>
                         <a href="about.html" class="text-gray-200 hover:text-glow-pink px-3 py-2 rounded">About</a>
                         <a href="events.html" class="text-gray-200 hover:text-glow-pink px-3 py-2 rounded">Events</a>
                         <a href="whyparticipate.html" class="text-gray-200 hover:text-glow-pink px-3 py-2 rounded">Why Participate</a>
@@ -376,7 +376,7 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
                 <div>
                     <h4 class="text-lg font-bold text-white mb-4">🔗 Quick Links</h4>
                     <ul class="space-y-2">
-                        <li><a href="first.html" class="text-gray-400 hover:text-glow-pink transition-colors">Home</a></li>
+                        <li><a href="index.html" class="text-gray-400 hover:text-glow-pink transition-colors">Home</a></li>
                         <li><a href="about.html" class="text-gray-400 hover:text-glow-pink transition-colors">About Event</a></li>
                         <li><a href="events.html" class="text-gray-400 hover:text-glow-pink transition-colors">Events List</a></li>
                         <li><a href="registration.html" class="text-gray-400 hover:text-glow-pink transition-colors">Register Now</a></li>
