Site Under Maitainance

--- a/events.html
+++ b/events.html
@@ -162,8 +162,8 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
          </div>               
      </div>
                     <div>
-                        <h1 class="text-lg md:text-xl font-bold gradient-text">Mukand Utsav 2026</h1>
-                        <p class="text-xs md:text-sm text-gray-400 college-gradient">MLN College, Yamunanagar</p>
+                        <h1 class="text-lg md:text-xl font-bold gradient-text">MLN College, Yamunanagar</h1>
+                        <p class="text-sm md:text-base text-gray-400 college-gradient font-bold">Self Finance Courses</p>
                     </div>
                 </div>
                 
@@ -322,7 +322,7 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
                         <div class="w-10 h-10 rounded-full bg-gradient-to-br from-glow-pink to-glow-purple flex items-center justify-center">
                             <span class="text-white font-bold">RT</span>
                         </div>
-                        <h3 class="text-xl font-bold gradient-text">Mukand Utsav 2026</h3>
+                        <h3 class="text-xl font-bold gradient-text">MLN College, Yamunanagar</h3>
                     </div>
                     <p class="text-gray-400 mb-4">
                         Organized by Mukand Lal National College<br>
@@ -410,7 +410,7 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
             <!-- Copyright -->
             <div class="border-t border-border-glow pt-8 mt-8 text-center">
                 <p class="text-gray-500">
-                    © Mukand Utsav 2026 | Mukand Lal National College, Yamunanagar | All Rights Reserved
+                    © MLN College, Yamunanagar \| Mukand Lal National College, Yamunanagar \| All Rights Reserved
                 </p>
                 <p class="text-sm text-gray-600 mt-2">
                     Designed By- Kunal Pandit
@@ -447,3 +447,6 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
 
 </body>
 </html>
+
+
+
