--- a/diy-craft-booth.html
+++ b/diy-craft-booth.html
@@ -145,8 +145,8 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
          </div>               
      </div>
                     <div>
-                        <h1 class="text-lg md:text-xl font-bold gradient-text">Mukand Utsav 2026</h1>
-                        <p class="text-xs md:text-sm text-gray-400 college-gradient">MLN College, Yamunanagar</p>
+                        <h1 class="text-lg md:text-xl font-bold gradient-text">MLN College, Yamunanagar</h1>
+                        <p class="text-sm md:text-base text-gray-400 college-gradient font-bold">Self Finance Courses</p>
                     </div>
                 </div>
                 
@@ -247,7 +247,7 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
                         <div class="w-10 h-10 rounded-full bg-gradient-to-br from-glow-pink to-glow-purple flex items-center justify-center">
                             <span class="text-white font-bold">RT</span>
                         </div>
-                        <h3 class="text-xl font-bold gradient-text">Mukand Utsav 2026</h3>
+                        <h3 class="text-xl font-bold gradient-text">MLN College, Yamunanagar</h3>
                     </div>
                     <p class="text-gray-400 mb-4">
                         Organized by Mukand Lal National College<br>
@@ -317,10 +317,10 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
                         <a href="https://www.instagram.com/mukandlalnationalcollege?igsh=MW1lZndmNTV0MXhuaA==" class="w-12 h-12 rounded-full bg-gradient-to-br from-glow-pink/20 to-glow-purple/20 flex items-center justify-center border border-glow-pink/30 hover:bg-glow-pink/30 transition-colors">
                             <i class="fab fa-instagram text-xl text-white"></i>
                         </a>
-                        <a href="#" class="w-12 h-12 rounded-full bg-gradient-to-br from-glow-purple/20 to-glow-orange/20 flex items-center justify-center border border-glow-purple/30 hover:bg-glow-purple/30 transition-colors">
+                        <a href="https://www.facebook.com/mukandlalnationalcollege/" class="w-12 h-12 rounded-full bg-gradient-to-br from-glow-purple/20 to-glow-orange/20 flex items-center justify-center border border-glow-purple/30 hover:bg-glow-purple/30 transition-colors">
                             <i class="fab fa-facebook-f text-xl text-white"></i>
                         </a>
-                        <a href="#" class="w-12 h-12 rounded-full bg-gradient-to-br from-glow-orange/20 to-glow-yellow/20 flex items-center justify-center border border-glow-orange/30 hover:bg-glow-orange/30 transition-colors">
+                        <a href="https://x.com/MLNcollege?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="w-12 h-12 rounded-full bg-gradient-to-br from-glow-orange/20 to-glow-yellow/20 flex items-center justify-center border border-glow-orange/30 hover:bg-glow-orange/30 transition-colors">
                             <i class="fab fa-twitter text-xl text-white"></i>
                         </a>
                         <a href="https://www.linkedin.com/school/mukandlal-national-college/" class="w-12 h-12 rounded-full bg-gradient-to-br from-glow-yellow/20 to-glow-pink/20 flex items-center justify-center border border-glow-yellow/30 hover:bg-glow-yellow/30 transition-colors">
@@ -335,7 +335,7 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
             <!-- Copyright -->
             <div class="border-t border-border-glow pt-8 mt-8 text-center">
                 <p class="text-gray-500">
-                    © Mukand Utsav 2026 | Mukand Lal National College, Yamunanagar | All Rights Reserved
+                    © MLN College, Yamunanagar \| Mukand Lal National College, Yamunanagar \| All Rights Reserved
                 </p>
                 <p class="text-sm text-gray-600 mt-2">
                     Designed By- Kunal Pandit
@@ -373,3 +373,6 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
 </body>
 </html></content>
 <parameter name="filePath">c:\Users\admin\Downloads\New folder\Mukand Utsav\diy-craft-booth.html
+
+
+
