--- a/antakshari-holi-edition.html
+++ b/antakshari-holi-edition.html
@@ -139,7 +139,7 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
          </div>               
      </div>
                     <div>
-                        <h1 class="text-lg md:text-xl font-bold gradient-text">MLN College, Yamunanagar</h1>
+                        <h1 class="text-base md:text-lg font-bold gradient-text">MLN College, Yamunanagar</h1>
                         <p class="text-sm md:text-base text-gray-400 college-gradient font-bold">Self Finance Courses</p>
                     </div>
                 </div>
@@ -258,7 +258,7 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
                     <h4 class="text-lg font-bold text-white mb-4">📍 Contact Information</h4>
                     <div class="space-y-4">
                         <div>
-                            <h5 class="text-glow-pink font-semibold mb-2">Faculty</h5>
+                            <h5 class="text-glow-pink font-semibold mb-2">Event Coordinators</h5>
                             <ul class="space-y-2">
                                 <li class="flex items-center space-x-3">
                                     <i class="fas fa-phone text-glow-purple"></i>
