--- a/gallery.html
+++ b/gallery.html
@@ -140,7 +140,7 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
          </div>               
      </div>
                     <div>
-                        <h1 class="text-lg md:text-xl font-bold gradient-text">MLN College, Yamunanagar</h1>
+                        <h1 class="text-base md:text-lg font-bold gradient-text">MLN College, Yamunanagar</h1>
                         <p class="text-sm md:text-base text-gray-400 college-gradient font-bold">Self Finance Courses</p>
                     </div>
                 </div>
@@ -243,7 +243,7 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
                     <h4 class="text-lg font-bold text-white mb-4">📍 Contact Information</h4>
                     <div class="space-y-4">
                         <div>
-                            <h5 class="text-glow-pink font-semibold mb-2">Faculty</h5>
+                            <h5 class="text-glow-pink font-semibold mb-2">Event Coordinators</h5>
                             <ul class="space-y-2">
                                 <li class="flex items-center space-x-3">
                                     <i class="fas fa-phone text-glow-purple"></i>
@@ -297,10 +297,10 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
                         <a href="https://www.instagram.com/mukandlalnationalcollege?igsh=MW1lZndmNTV0MXhuaA==" title="Instagram" class="w-12 h-12 rounded-full bg-gradient-to-br from-glow-pink/20 to-glow-purple/20 flex items-center justify-center border border-glow-pink/30 hover:bg-glow-pink/30 transition-colors">
                             <i class="fab fa-instagram text-xl text-white"></i>
                         </a>
-                        <a href="#" title="Facebook" class="w-12 h-12 rounded-full bg-gradient-to-br from-glow-purple/20 to-glow-orange/20 flex items-center justify-center border border-glow-purple/30 hover:bg-glow-purple/30 transition-colors">
+                        <a href="https://www.facebook.com/mukandlalnationalcollege/" title="Facebook" class="w-12 h-12 rounded-full bg-gradient-to-br from-glow-purple/20 to-glow-orange/20 flex items-center justify-center border border-glow-purple/30 hover:bg-glow-purple/30 transition-colors">
                             <i class="fab fa-facebook-f text-xl text-white"></i>
                         </a>
-                        <a href="#" title="Twitter" class="w-12 h-12 rounded-full bg-gradient-to-br from-glow-orange/20 to-glow-yellow/20 flex items-center justify-center border border-glow-orange/30 hover:bg-glow-orange/30 transition-colors">
+                        <a href="https://x.com/MLNcollege?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" title="Twitter" class="w-12 h-12 rounded-full bg-gradient-to-br from-glow-orange/20 to-glow-yellow/20 flex items-center justify-center border border-glow-orange/30 hover:bg-glow-orange/30 transition-colors">
                             <i class="fab fa-twitter text-xl text-white"></i>
                         </a>
                         <a href="https://www.linkedin.com/school/mukandlal-national-college/" title="LinkedIn" class="w-12 h-12 rounded-full bg-gradient-to-br from-glow-yellow/20 to-glow-pink/20 flex items-center justify-center border border-glow-yellow/30 hover:bg-glow-yellow/30 transition-colors">
