--- a/registration.html
+++ b/registration.html
@@ -139,8 +139,8 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
          </div>               
      </div>
                     <div>
-                        <h1 class="text-base md:text-lg font-bold gradient-text">MLN College, Yamunanagar</h1>
-                        <p class="text-sm md:text-base text-gray-400 college-gradient font-bold">Self Finance Courses</p>
+                        <h1 class="text-sm md:text-base font-bold gradient-text">MLN College, Yamunanagar</h1>
+                        <p class="text-xs md:text-base text-gray-400 college-gradient font-bold">Self Finance Courses</p>
                     </div>
                 </div>
                 
