Two Events are separated

--- a/events.html
+++ b/events.html
@@ -298,10 +298,10 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
                     <div class="w-14 h-14 rounded-full bg-gradient-to-br from-glow-yellow/20 to-glow-pink/20 flex items-center justify-center mb-4">
                         <span class="text-2xl">🔬</span>
                     </div>
-                    <h3 class="text-xl font-bold text-white mb-2">Science Exhibition & Ethnic Beads</h3>
+                    <h3 class="text-xl font-bold text-white mb-2">Science Exhibition</h3>
                     <p class="text-gray-400 mb-4">Science & Art Fusion</p>
-                    <p class="text-sm text-gray-300 mb-6">Showcase innovative science projects and participate in colorful Ethnic Beads making competition.</p>
-                    <p class="text-sm text-gray-400 mb-4"><strong>Venue:</strong> AR/VR Lab and Auditorium Back</p>
+                    <p class="text-sm text-gray-300 mb-6">Showcase innovative science projects.</p>
+                    <p class="text-sm text-gray-400 mb-4"><strong>Venue:</strong> AR/VR Lab</p>
                     <div class="flex justify-between items-center event-actions">
                         <span class="text-sm bg-glow-yellow/20 text-glow-yellow px-3 py-1 rounded-full event-club">Zener Science Club</span>
                         <a href="science-exhibition-kandi-making.html" class="register-btn text-white text-sm font-medium py-2 px-6 rounded-full inline-block view-more-btn">
@@ -309,6 +309,20 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
                         </a>
                     </div>
                 </div>
+                <div class="glass-effect rounded-2xl p-6 card-hover neon-border">
+                    <div class="w-14 h-14 rounded-full bg-gradient-to-br from-glow-yellow/20 to-glow-pink/20 flex items-center justify-center mb-4">
+                        <span class="text-2xl">🔬</span>
+                    </div>
+                    <h3 class="text-xl font-bold text-white mb-2">Ethnic Beads</h3>
+                    <p class="text-gray-400 mb-4">Science & Art Fusion</p>
+                    <p class="text-sm text-gray-300 mb-6">Participate in colorful Ethnic Beads making competition.</p>
+                    <p class="text-sm text-gray-400 mb-4"><strong>Venue:</strong>Auditorium Back</p>
+                    <div class="flex justify-between items-center event-actions">
+                        <span class="text-sm bg-glow-yellow/20 text-glow-yellow px-3 py-1 rounded-full event-club">Zener Science Club</span>
+                        <a href="ethnic-beads.html" class="register-btn text-white text-sm font-medium py-2 px-6 rounded-full inline-block view-more-btn">
+                            View More
+                        </a>
+                    </div>
             </div>
         </div>
     </section>
