--- a/form.html
+++ b/form.html
@@ -133,7 +133,8 @@ Mukand Utsav 2026 Registration
     <option>Antakshari – Holi Edition</option>
     <option>Documentary on Women Empowerment</option>
     <option>Rainbow Rush</option>
-    <option>Science Exhibition & Ethnic Beads</option>
+    <option>Science Exhibition</option>
+    <option>Ethnic Beads(Kandi Making)</option>
 </select>
 
 
@@ -413,7 +414,8 @@ const eventCodes = {
     "Antakshari – Holi Edition": "03",
     "Documentary on Women Empowerment": "04",
     "Rainbow Rush": "05",
-    "Science Exhibition & Ethnic Beads": "06"
+    "Science Exhibition: "06",
+     "Ethnic Beads(Kandi Making)": "07"
 };
 
 const form = document.getElementById("registrationForm");
