--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@ bg-gradient-to-br from-glow-pink to-glow-purple">
 
 <div class="w-full overflow-hidden bg-gradient-to-r from-pink-500 to-purple-600 py-2">
     <div class="marquee-track">
-        <a href="form.html">Mukand Utsav | Registration Open</a>
-        <a href="form.html">Mukand Utsav | Registration Open</a>
-        <a href="form.html">Mukand Utsav | Registration Open</a>
-        <a href="form.html">Mukand Utsav | Registration Open</a>
+        <a href="form.html">Mukand Utsav | Registration Open | Participation certificates will be provided</a>
+        <a href="form.html">Mukand Utsav | Registration Open | Participation certificates will be provided</a>
+        <a href="form.html">Mukand Utsav | Registration Open | Participation certificates will be provided</a>
+        <a href="form.html">Mukand Utsav | Registration Open | Participation certificates will be provided</a>
     </div>
 </div>
 
