--- a/form.html
+++ b/form.html
@@ -9,6 +9,11 @@
 <script src="https://cdn.tailwindcss.com"></script>
 
 <script>
+// if events have been globally closed we don't even let the user see the form
+const allEventsClosed = false; // flip to true along with the other pages
+if(allEventsClosed){
+    window.location.href = 'events-closed.html';
+}
 tailwind.config = {
     theme:{
         extend:{
@@ -357,7 +362,8 @@ document.addEventListener('DOMContentLoaded', function() {
         const eventSelectEl = this;
         const eventLabelEl = eventSelectEl.previousElementSibling;
 
-        if (selectedEvent === 'Science Exhibition' || selectedEvent === 'Rainbow Rush' || selectedEvent === 'Digital Art Fiesta') {
+        // Previously Science Exhibition was treated as a closed event; registrations are now open
+        if (selectedEvent === 'Rainbow Rush' || selectedEvent === 'Digital Art Fiesta') {
             formMessage.textContent = 'Registrations for this event are closed because entries are full.';
             formMessage.className = 'text-center text-sm text-red-400 mb-4';
 
